# authful-actix-web

./: .env.example  Cargo.toml  README.md
core/: Cargo.toml
core/migrations/2018-10-09-101948_users/: up.sql
core/migrations/2019-08-18-054212_sessions/: up.sql
core/src/: errors.rs  lib.rs  schema.rs
core/src/models/: auth.rs
core/src/services/: auth.rs
core/src/utils/: auth.rs
http_transport/: Cargo.toml
http_transport/src/: auth.rs  errors.rs  helper.rs  helpers.rs  main.rs
http_transport/src/routes/: auth.rs  mod.rs
