[package]
name = "core"
version = "0.1.0"
authors = ["Boogie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
chrono = { version = "0.4.7", features = ["serde"] }
sha2 = "0.8.0"
hex = "0.3.2"
log = "0.4.8"
argonautica = "0.2.0"
r2d2 = "0.8.5"
