[package]
name = "http_transport"
version = "0.1.0"
authors = ["mygnu <tech@hgill.io>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
chrono = { version = "0.4.7", features = ["serde"] }
dotenv = "0.14.1"
env_logger = "0.6"
futures = "0.1"
r2d2 = "0.8"
lazy_static = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
log = "0.4.8"
rand = "0.7.0"
actix-cors = "0.1.0"
core = { path = "../core" }
time = "0.1.42"
